+ added element management

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ng-app</title>
+  <title>Eastro</title>
   <base href="/">
   <meta content='no-cache, no-store, must-revalidate'/>
   <meta content='no-cache'/>
